# py-scriber

./: .gitignore  README.md  pyproject.toml  requirements.txt  transcriber.py
