[project]
name = "yt-dlp-transcriber"
version = "0.1.0"
description = "Extract YouTube video captions and convert them to clean Markdown"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2024.0.0",
    "ollama>=0.1.0",
]

[project.scripts]
transcribe = "transcriber:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["transcriber.py"]
